--- a/css/style2.css
+++ b/css/style2.css
@@ -25,18 +25,20 @@ p {
 }
 
 a, a:hover, a:focus {
-    color: inherit;
+    color: white;
     text-decoration: none;
     transition: all 0.3s;
 }
 
 .navbar {
-    padding: 15px 10px;
+    padding: 10px 10px;
     background: #444444;
     border: none;
     border-radius: 1;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+	margin-right:-16px;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    color:white;
 }
 
 .navbar-btn {
@@ -62,7 +64,7 @@ a, a:hover, a:focus {
     SIDEBAR STYLE
 ----------------------------------------------------- */
 #sidebar {
-    width: 250px;
+    width: 200px;
     position: fixed;
     top: 0;
     left: 0;
@@ -74,16 +76,16 @@ a, a:hover, a:focus {
 }
 
 #sidebar.active {
-    margin-left: -250px;
+    margin-left: -200px;
 }
 
 #sidebar .sidebar-header {
-    padding: 20px;
+    padding: 30px;
     background: #444444;
 }
 
 #sidebar ul.components {
-    padding: 20px 0;
+    padding: 30px 0;
     border-bottom: 1px solid #666;
 }
 
@@ -143,13 +145,25 @@ ul.CTAs a {
     margin-bottom: 5px;
 }
 
+/* --------------------------------------------------
+	LINKS NAV BAR
+---------------------------------------------------- */
+
+#itens-nav-bar a {
+	color:#c4c4c4;
+}
+#itens-nav-bar a:hover {
+	color:#CCFF33;
+}
+
+
 
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
 #content {
-    width: calc(100% - 250px);
-    padding: 40px;
+    width: calc(100% - 180px);
+    padding: 35px;
     min-height: 100vh;
     transition: all 0.3s;
     position: absolute;
@@ -166,16 +180,16 @@ ul.CTAs a {
 ----------------------------------------------------- */
 @media (max-width: 768px) {
     #sidebar {
-        margin-left: -250px;
+        margin-left: -200px;
     }
     #sidebar.active {
         margin-left: 0;
     }
     #content {
-        width: 100%;
+        width: 103%;
     }
     #content.active {
-        width: calc(100% - 250px);
+        width: calc(100% - 170px);
     }
     #sidebarCollapse span {
         display: none;
